# claude-toolkit

./: .gitignore  .rumdl.toml  .shellcheckrc  CLAUDE.md  README.md  deploy  deploy.json  deploy.py  deploy.sh  pyproject.toml  test.sh
.claude/: command-permissions.json  settings.json  settings.local.json  todo.md
.claude-plugin/: marketplace.json
conditionals/: is-wsl.sh
deploy/: __init__.py  cli.py  common.py  config.py  deploy_hooks.py  deploy_mcp.py  deploy_skills.py  deployers.py  discovery.py  filters.py  linker.py  permissions.py  profiles.py
deploy-py/: deploy.py  test.sh
deploy-rs/: CLAUDE.md  Cargo.toml  test.sh
deploy-rs/src/: cli.rs  config.rs  discovery.rs  linker.rs  main.rs  permissions.rs  settings.rs
deploy-rs/src/deploy/: hooks.rs  mcp.rs  mod.rs  permission_groups.rs  skills.rs
deploy-rs/src/tui/: app.rs  events.rs  mod.rs  state.rs  ui.rs
deploy-rs/tests/: deploy_cli_validation.rs  deploy_config.rs  deploy_dependencies.rs  deploy_filtering.rs  deploy_hooks.rs  deploy_mcp.rs  deploy_permission_groups.rs  deploy_permissions.rs  deploy_symlinks.rs
deploy-rs/tests/common/: mod.rs
docs/: todo.md
mcp/: CLAUDE.md
permissions/: CLAUDE.md  github.json  rust.json  web.json
skills/: CLAUDE.md
tests/: conftest.py  run-all.sh  test-bash-safety-compound.sh  test-bash-safety-custom-patterns.sh  test-bash-safety-gradle.sh  test-bash-safety-hook.sh  test-deploy-cli-validation.sh  test-deploy-config-merge.sh  test-deploy-dependencies.sh  test-deploy-filtering.sh  test-deploy-hooks.sh  test-deploy-permissions.sh  test-deploy-symlinks.sh  (+18 more)
(+410 files in other folders)
