[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
tempfile = "3"
ratatui = "0.28"
crossterm = "0.28"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
